Gnome: Fix low text contrast in calendar events widget

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -5800,6 +5800,13 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: #ff79c6; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light label, .color-light.timed label {
+  color: #1e1f29;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
